# analyst-arena

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.hud  README.md  __init__.py  api_server.py  data.py  env.py  package-lock.json  package.json  post_trade_reflection_15_tests.json  pyproject.toml  rubrics.py  run_round_robin.py  run_single_match.py  run_tournament.py  start_dev.ps1  stop_dev.ps1  streamlit_app.py  validation_sets.json
Frontend-figma/: index.html  package-lock.json  package.json  vite.config.ts
Frontend-figma/src/app/: routes.tsx
Frontend-figma/src/app/components/: LiveSimulation.tsx  StockSelector.tsx  WinnerAnnouncement.tsx  api.ts
Frontend-figma/src/styles/: fonts.css  theme.css
analyst_arena/: __init__.py  env.py
analyst_arena/agents/: __init__.py  base.py  providers.py
analyst_arena/engine/: __init__.py  debate.py  match.py  scenarios.py  tournament.py
analyst_arena/integrations/: __init__.py  client.py  providers.py  response.py
analyst_arena/models/: __init__.py  enums.py  schemas.py
analyst_arena/scoring/: __init__.py  evaluator.py  judge.py  leaderboard.py  scenario_eval.py
analyst_arena/storage/: __init__.py  leaderboard.py  results.py
docs/: qa_report_scenario_layer.md  repo_assessment.md  scenario_design_spec.md  scenario_scoring_rubric.md
scripts/: generate_eval_task_sets.py
task_sets/eval/v1/: factor_weight_ranking.jsonl  manifest.json  post_trade_reflection.jsonl  trade_decision_step.jsonl
tests/: test_no_lookahead.py  test_scenario_eval.py
