[project]
name = "analyst-arena"
version = "0.1.0"
description = "HUD environment for model-vs-model financial analyst debate (Analyst Arena)"
requires-python = ">=3.11"
dependencies = [
    "hud-python>=0.1.0",
    "streamlit>=1.55.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["analyst_arena"]
include = ["env.py", "data.py", "rubrics.py", "run_tournament.py"]

[tool.hatch.build.targets.sdist]
include = [
    "/analyst_arena",
    "/env.py",
    "/data.py",
    "/rubrics.py",
    "/README.md",
    "/Dockerfile.hud",
    "/run_tournament.py",
]

[tool.hud]
name = "analyst-arena"
