[project]
name = "analyst-arena"
version = "0.1.0"
description = "HUD environment for a model-vs-model backtest trading showdown (Analyst Arena)"
requires-python = ">=3.11"
dependencies = [
    "hud-python>=0.1.0",
    "openai>=1.60.0",
    "anthropic>=0.40.0",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["analyst_arena"]
include = [
    "env.py",
    "data.py",
    "rubrics.py",
    "api_server.py",
    "run_tournament.py",
    "run_single_match.py",
    "run_round_robin.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "analyst_arena",
    "env.py",
    "data.py",
    "rubrics.py",
    "README.md",
    "Dockerfile.hud",
    "api_server.py",
    "run_tournament.py",
    "run_single_match.py",
    "run_round_robin.py",
]

[tool.hud]
name = "analyst-arena"
